--- a/src/pages/view.css
+++ b/src/pages/view.css
@@ -1,11 +1,11 @@
-.container {
+/* .container {
     max-width: 900px;
     margin: auto;
     background: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+} */
 h2 {
     text-align: center;
     color: #333;
