--- a/src/main.css
+++ b/src/main.css
@@ -1,275 +1,257 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --mainColor: #07a997;
-    --bgColor: #e7f2f1;
-    --footerlight:#3d4452;
-    --footerdark:#333643;
-
+  --mainColor: #07a997;
+  --bgColor: #e7f2f1;
+  --footerlight: #3d4452;
+  --footerdark: #333643;
 }
 
 html {
-    font-size: 62.5%;
-    font-family: Arial, sans-serif;
+  font-size: 62.5%;
+  font-family: Arial, sans-serif;
 }
 
 body {
-    /* background-color: var(--bgColor); */
-    color: #333;
-    font-size: 2.3rem;
-    line-height: 1.5;
+  /* background-color: var(--bgColor); */
+  color: #333;
+  font-size: 2.3rem;
+  line-height: 1.5;
 }
 .grid {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
-.flex{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
-.grid-two{
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(2, 1fr);
-    /* gap: 2rem; */
+.grid-two {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, 1fr);
+  /* gap: 2rem; */
 }
-.left .right{
-    width: 49%;
+.left .right {
+  width: 49%;
 }
 button {
-    background: var(--mainColor);
-    color: #fff;
-    padding: 1.2rem 2.4rem;
-    border: none;
-    border-radius: 0.8rem;
-    font-size: 1.8rem;
-    font-weight: bold;
-    text-decoration: none;
-    text-align: center;
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  background: var(--mainColor);
+  color: #fff;
+  padding: 1.2rem 2.4rem;
+  border: none;
+  border-radius: 0.8rem;
+  font-size: 1.8rem;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 button:hover {
-    background: #055f4f;
-    color: #e7f2f1;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-    transform: translateY(-3px);
+  background: #055f4f;
+  color: #e7f2f1;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  transform: translateY(-3px);
 }
-
-
-nav {
-    background-color: var(--bgColor);
-    display: flex ;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem 2rem;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-nav .content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    max-width: 120rem;
-}
-.content{
-    margin: 0 auto;
-    min-width:80vw ;
-    max-width: 120rem;
-}
-
-
-ul, li, a {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    text-decoration: none;
-    list-style: none;
-    color: #333;
-    position: relative; /* Required for positioning the pseudo-element */
-}
-nav img{
-    height: 5rem;
-    /* width: 5rem; */
-   
-}
-
-a::after {
-    content: '';
-    position: absolute;
-    bottom: -2px; /* Adjust the position of the underline */
-    left: 50%;
-    width: 0;
-    height: 2px; /* Thickness of the underline */
-    background-color: var(--mainColor);
-    transition: all 0.3s ease-in-out; /* Smooth transition */
-    transform: translateX(-50%);
-}
-
-a:hover::after {
-    width: 100%; /* Expand the underline to full width */
-}
-Nav .active{
-    color: var(--mainColor);
-    
-    
-   
-}
-.logo img{
-    height: 10rem;
-}
-
-
 
 
 /* ========hero======= */
 
-.hero{
-    /* height: 100vh; */
-    padding: 5rem 0 0 0;
-    background: rgb(251, 255, 253);
-   
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    
+.hero {
+  /* height: 100vh; */
+  padding: 5rem 0 0 0;
+  background: rgb(251, 255, 253);
+
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
-.hero_text h1{
-font-size: 7rem;
+.hero_text h1 {
+  font-size: 7rem;
 }
 
-.hero_img img{
- 
-    align-items: self-end;
-    height:80rem;
+.hero_img img {
+  align-items: self-end;
+  height: 80rem;
 }
 
 /* hero second */
 
-.hero-second{
-    background: var(--bgColor);
+.hero-second {
+  background: var(--bgColor);
 }
 
-.grid-four{
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+.grid-four {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
 }
 
-.hero-second .box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    height: 18rem;
+.hero-second .box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  height: 26rem;
 }
 .box_icon {
-    height: 4rem;
-    width: 4rem;
-    color: white;
-    border-radius: 50%;
-  
-    background: var(--mainColor);
+  /* height:10rem;
+  width: 10rem; */
+  padding: 1rem;
+  color: white;
+  font-size: 6rem;
+  border-radius: 50%;
+
+  background: var(--mainColor);
+
 }
-
-
-
-
-
-
-
-
-
-
-
+.hero-second .text {
+  
+  & h1{
+    font-size: 3rem;
+  }  
+  & p{
+    font-size:1.4rem;
+    line-height: 1.5;
+  }
+}
 
 
 /* ---book---- */
 
-.book{
-    background: var(--bgColor);
-    height: 90vh;
-    display: grid;
-    justify-content: center;
-    align-items: center;
+.book {
+  /* background: ; */
+  height: 90vh;
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
-.bookbox .box{
-    background: #fff;
-    height: 50rem;
-    width: 110rem;
-    border-radius: 1rem;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    transition: all 0.3s ease-in-out;
+.bookbox .box {
+  background: #fff;
+  height: 50rem;
+  width: 110rem;
+  border-radius: 1rem;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.901);
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
 }
-.bookbox .img{
-    background: var(--mainColor);
+.bookbox .img {
+  background: var(--mainColor);
 }
-.bookbox .img img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 2rem;
-    padding: 2rem;
-
-}
-form input{
-    width: 100%;
-    padding: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 0.5rem;
-    font-size: 1.6rem;
-    outline: none;
-    transition: all 0.3s ease-in-out;
-}
-form input:focus{
-    border: 1px solid var(--mainColor);
-    box-shadow: 0 0 5px rgba(7, 169, 151, 0.5);
+.bookbox .img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 2rem;
+}
+form input ,select{
+  width: 100%;
+  padding: 1rem;
+  color:rgb(118, 116, 116);
+  border: 1px solid #ccc;
+  border-radius: 0.5rem;
+  font-size: 1.6rem;
+  outline: none;
+  transition: all 0.3s ease-in-out;
+}
+form input:focus ,select:focus {
+  border: 1px solid var(--mainColor);
+  box-shadow: 0 0 5px rgba(7, 169, 151, 0.5);
+}
 
 .addmin-form {
-    max-width: 50rem;
-    margin: 0 auto;
-    padding: 2rem;
-    /* color: red; */
+  max-width: 50rem;
+  margin: 0 auto;
+  padding: 2rem;
+  /* color: red; */
 }
+
+
+/* addmine page css  */
+
+ .form_grid {
+
+  
+  display: grid;
+  /* justify-content: center; */
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  gap: 4rem;
+
+  
+
+}
+
+.form-actions{
+  /* grid-area: span 2; */
+  grid-column: span 2;
+}
+
+
 
 
 /* footer  */
 
-footer{
-    color: white;
-
-background-color: var(--footerlight);
+footer {
+  color: white;
+  background-color: var(--footerlight);
+  /* padding: 2rem 1rem; */
 }
 
- footer .copywright p{
-    background-color: var(--footerdark);
-    
-}
-.grid_three{
+footer .grid_three {
     display: grid;
-    grid-template-rows: repeat(3,1fr);
-    
-    
-    
+    justify-content: center;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    padding: 2rem 0;
+}
+
+footer .grid_three div {
+  text-align: center; /* Center-align content */
+}
+
+footer .grid_three h3 {
+
+  font-size: 2rem;
+  margin: 1rem;
+  color: var(--mainColor); /* Use your main color for headings */
+}
+
+footer .grid_three p {
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: #ccc; /* Light text color for better contrast */
+}
+
+footer .copywright {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.4rem;
+  background-color: var(--footerdark);
+  padding: 1rem;
+  color: #fff;
+}
+
+footer .copywright p {
+  background-color: var(--footerdark);
 }
